Added local data storing

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,22 @@ cython_debug/
 pyvenv.cfg
 /bin
 .DS_Store
+/data
+myenv/etc/jupyter/nbconfig/notebook.d/pydeck.json
+myenv/Scripts/activate
+myenv/Scripts/activate.bat
+myenv/Scripts/Activate.ps1
+myenv/Scripts/convert-caffe2-to-onnx.exe
+myenv/Scripts/convert-onnx-to-caffe2.exe
+myenv/Scripts/deactivate.bat
+myenv/Scripts/f2py.exe
+myenv/Scripts/huggingface-cli.exe
+myenv/Scripts/isympy.exe
+myenv/Scripts/jsonschema.exe
+myenv/Scripts/markdown-it.exe
+*.map
+*.exe
+*.cmd
+myenv/share/jupyter/nbextensions/pydeck/index.js
+myenv/share/man/man1/isympy.1
+myenv/share/jupyter/nbextensions/pydeck/extensionRequires.js
